Fixed comment content responsive on mobile

--- a/ui/css/post-comment.css
+++ b/ui/css/post-comment.css
@@ -50,9 +50,9 @@
   margin: 0 0 10px 80px;
 }
 
-@media only screen and (max-width: 360px){
+@media only screen and (max-width: 500px){
   .post .post-description p {
-    margin: 50px 0 10px 10px
+    margin: 10px 0 10px 10px
  }
 }
 
